--- a/style.css
+++ b/style.css
@@ -14,13 +14,24 @@ body {
 }
 
 .container {
-  height: 100vh;
+  min-height: 100%;
   width: 960px;
   margin: 20px auto;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-template-rows: repeat(3, auto);
+  /* background: seagreen; */
 }
+
+/* .container {
+  height: 100vh;
+  width: 960px;
+  margin: 20px auto;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 10px;
+} */
 
 header {
   height: 150px;
@@ -47,14 +58,17 @@ header {
 
 main {
   width: 100%;
-  height: 100%;
-  display: flex;
+  min-height: 100%;
+  /* display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: center; */
   grid-row: 2;
   grid-column: 1;
   padding-bottom: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(6, 100px);
 }
 
 .card {
@@ -63,12 +77,42 @@ main {
   position: relative;
   padding: 5px;
   margin: 20px 10px;
+  /* border: deeppink dashed 1px; */
+}
+
+.card1 {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+}
+
+.card4 {
+  grid-row: 5 / 6;
+  grid-column: 1 / 2;
+}
+
+.card2 {
+  grid-column: 2 / 3;
+  grid-row: 2 /4;
+}
+
+.card5 {
+  grid-column: 2 / 3;
+  grid-row: 6;
+}
+.card3 {
+  grid-column: 3;
+  grid-row: 1 / 3;
+}
+.card6 {
+  grid-column: 3;
+  grid-row: 5/6;
 }
 
 .card > h3 {
   position: absolute;
   bottom: 5px;
   left: 5px;
+  /* border: deepskyblue 1px dashed; */
 }
 
 .card > small {
@@ -91,14 +135,10 @@ main {
   width: 90%;
 }
 
-.down {
-  transform: translateY(50px);
-}
-
 /* Footer */
 
 footer {
-  margin: 20px 0;
+  margin: 30px 0;
   text-align: center;
   grid-row: 3;
   grid-column: 1;
@@ -106,7 +146,7 @@ footer {
 
 /* MediQuerie */
 
-@media screen and (max-width: 360px) {
+/* @media screen and (max-width: 360px) {
   .container {
     width: 360px;
     height: 100%;
@@ -129,6 +169,9 @@ footer {
   main {
     height: 100%;
     width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 50px);
   }
 
   .card {
@@ -144,9 +187,109 @@ footer {
   .card > h3 {
     font-size: 14px;
   }
+  .card1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+  }
+
+  .card4 {
+    grid-row: 5 / 6;
+    grid-column: 1 / 2;
+  }
+
+  .card2 {
+    grid-column: 2;
+    grid-row: 2 /4;
+  }
+
+  .card5 {
+    grid-column: 2;
+    grid-row: 6;
+  }
+  .card3 {
+    grid-column: 2;
+    grid-row: 1 / 3;
+  }
+  .card6 {
+    grid-column: 2;
+    grid-row: 5/6;
+  }
+} */
+
+@media screen and (max-width: 760px) {
+  .container {
+    width: 360px;
+    min-height: 100%;
+    margin: 0px;
+  }
+
+  header {
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 200px;
+    width: 100%;
+    padding: 10px 10px;
+  }
+
+  .weAre {
+    font-size: 14px;
+    width: 100%;
+  }
+
+  main {
+    min-height: 100%;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(10, 100px);
+    /* background: chartreuse; */
+  }
+
+  .card {
+    width: 159px;
+    height: 262px;
+  }
+
+  .card > img {
+    height: 90%;
+    width: 90%;
+  }
+
+  .card > h3 {
+    font-size: 14px;
+  }
+
+  .card1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+  }
+
+  .card4 {
+    grid-row: 5 / 6;
+    grid-column: 2;
+  }
+
+  .card2 {
+    grid-column: 2;
+    grid-row: 2 /4;
+  }
+
+  .card5 {
+    grid-column: 1/ 2;
+    grid-row: 7 / 8;
+  }
+  .card3 {
+    /* border: coral 1px dashed; */
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
+  .card6 {
+    grid-column: 2;
+    grid-row: 8;
+  }
 }
 
-@media screen and (max-width: 450px) {
+/* @media screen and (max-width: 780px) {
   .container {
     width: 360px;
     height: 100%;
@@ -169,6 +312,9 @@ footer {
   main {
     height: 100%;
     width: 100vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 100px);
   }
 
   .card {
@@ -184,44 +330,32 @@ footer {
   .card > h3 {
     font-size: 14px;
   }
-}
 
-@media screen and (max-width: 780px) {
-  .container {
-    width: 360px;
-    height: 100%;
-    margin: 0px;
+  .card1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
   }
 
-  header {
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 200px;
-    width: 100%;
-    padding: 10px 10px;
+  .card4 {
+    grid-row: 5 / 6;
+    grid-column: 1 / 2;
   }
 
-  .weAre {
-    font-size: 14px;
-    width: 100%;
+  .card2 {
+    grid-column: 2;
+    grid-row: 2 /4;
   }
 
-  main {
-    height: 100%;
-    width: 100vw;
+  .card5 {
+    grid-column: 2;
+    grid-row: 6;
   }
-
-  .card {
-    width: 159px;
-    height: 262px;
+  .card3 {
+    grid-column: 2;
+    grid-row: 1 / 3;
   }
-
-  .card > img {
-    height: 90%;
-    width: 90%;
+  .card6 {
+    grid-column: 2;
+    grid-row: 5/6;
   }
-
-  .card > h3 {
-    font-size: 14px;
-  }
-}
+} */
